force-app/main/default/objects/google_api_settings__c/google_api_settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Google API Settings</label>
</CustomObject>