force-app/main/default/objects/google_api_settings__c/fields/Api_url__c.field-meta.xml
<CustomField>
    <fullName>Api_url__c</fullName>
    <label>Api url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>