force-app/main/default/objects/google_api_settings__c/fields/Auth_url__c.field-meta.xml
<CustomField>
    <fullName>Auth_url__c</fullName>
    <label>Auth url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>