force-app/main/default/objects/google_api_settings__c/fields/redirect_url__c.field-meta.xml
<CustomField>
    <fullName>redirect_url__c</fullName>
    <label>Redirect url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>