force-app/main/default/objects/google_api_settings__c/fields/Token_url__c.field-meta.xml
<CustomField>
    <fullName>Token_url__c</fullName>
    <label>Token exchange url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>